[gd_scene load_steps=9 format=3 uid="uid://c71evkxmfm70r"]

[ext_resource type="Script" path="res://minigames/counting/falling_numbers_0_to_9/falling_numbers_0_to_9.gd" id="1_ttqab"]
[ext_resource type="Texture2D" uid="uid://dxscafeyv3xit" path="res://minigames/counting/falling_numbers_0_to_9/assets/honey_comb_bg.png" id="2_8dfuk"]
[ext_resource type="AudioStream" uid="uid://bkd653hbhci4p" path="res://minigames/counting/falling_decimals_0_to_2/assets/House In a Forest Loop.ogg" id="2_ajsij"]
[ext_resource type="AudioStream" uid="uid://4v7avs54e5sm" path="res://minigames/counting/falling_decimals_0_to_2/assets/gameover.wav" id="3_qjww3"]
[ext_resource type="Texture2D" uid="uid://chmc52fil8m0j" path="res://minigames/counting/falling_numbers_0_to_9/assets/number_line.png" id="4_uw1jm"]
[ext_resource type="Texture2D" uid="uid://c5rl83flr8i42" path="res://minigames/counting/falling_numbers_0_to_9/assets/number_line_cracked1.png" id="6_onu03"]
[ext_resource type="Texture2D" uid="uid://brtsgcvvtkk6t" path="res://minigames/counting/falling_numbers_0_to_9/assets/number_line_cracked2.png" id="7_45vds"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nxjm2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_uw1jm")
}, {
"duration": 1.0,
"texture": ExtResource("6_onu03")
}, {
"duration": 1.0,
"texture": ExtResource("7_45vds")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="FallingDecimals0To9" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ttqab")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8dfuk")
centered = false

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ajsij")

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qjww3")

[node name="NumberTimer" type="Timer" parent="."]
wait_time = 3.085

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="NumberLine" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nxjm2")
centered = false

[node name="BreakParticles" type="CPUParticles2D" parent="NumberLine"]
position = Vector2(701, 6)
emitting = false
amount = 256
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.04
emission_shape = 3
emission_rect_extents = Vector2(700, 1)
initial_velocity_max = 36.36
angle_min = -20.0
angle_max = 20.0
scale_amount_min = 12.0
scale_amount_max = 12.0
color = Color(0, 0, 0, 1)

[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
